<resources>
    <string name="app_name">App_Practica</string>

    <!-- Strign Actividad Menu -->
    <string name="alumno">Alexis Ariel Garcia Ramirez</string>
    <string name="matricula">22050720</string>
    <string name="materia">Programacion movil</string>

    <string name="hola">Hola</string>
    <string name="imc">IMC</string>
    <string name="conversion">Convertidor</string>
    <string name="moneda">Conversion</string>
    <string name="coti">Cotizacion</string>

    <!-- Strign Actividad Hola -->
    <string name="nombre">Captura tu nombre</string>
    <string name="titulo">Practica 01 Saludo</string>
    <string name="Limpiar">Limpiar</string>
    <string name="Pulsar">Pulsar</string>
    <string name="Salir">Salir</string>

    <!-- Strign Actividad IMC -->
    <string name="altura">Captura la altura</string>
    <string name="peso">Captura el peso</string>
    <string name="msj">! Su resultado aparece aqui !</string>
    <string name="calcular">Calcular</string>
    <string name="cerrar">Cerrar</string>

    <!-- Strign Actividad Grados -->
    <string name="lblGrados">Grados</string>
    <string name="lblCantidad">Captura la cantidad de grados</string>
    <string name="cel">Celsius a Fahrenheit</string>
    <string name="far">Fahrenheit a Celsius</string>
    <string name="res">Resultado</string>

    <!-- Strign Actividad Monedas -->
    <string name="cantidad">Cantidad a convertir</string>
    <string-array name="array_conversiones">
        <item>Pesos Mexicanos - Dolares Americanos</item>
        <item>Pesos Mexicanos - Dolares Canadienses</item>
        <item>Pesos Mexicanos - Euros</item>
        <item>Dolares Americanos - Pesos Mexicanos</item>
        <item>Dolares Canadienses - Pesos Mexicanos</item>
        <item>Euros - Pesos Mexicanos</item>
    </string-array>
    <string name="dolara">19.75</string>
    <string name="dolarc">14.75</string>
    <string name="euro">22.02</string>

    <!-- Strign Actividad Cotizacion -->
    <string name="marca">Toyota</string>
    <string name="direccion">Av. del Mar 1200</string>
    <string name="ciudad">Mazatlan, Sinaloa</string>
    <string name="cliente">Nombre del cliente</string>
    <string name="lblnombre">Escribe el nombre del cliente</string>
    <string name="ingresar">Ingresar</string>
    <string name="regresar">Regresar</string>
    <string name="folio">No. Folio</string>
    <string name="des">Descripcion del automovil</string>
    <string name="precio">Valor del automovil</string>
    <string name="po">Porcentaje de pago inicial</string>
    <string name="plazos">Plazos</string>
    <string name="pmensual">Pago mensual: </string>
    <string name="pinicial">Porcentaje de pago inicial</string>
    <string name="porinicial">Pago inicial: </string>
    <string name="tfin">Total a financiar: </string>

</resources>