<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cotizacion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nombre del cliente"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:layout_marginTop="10sp"
            android:id="@+id/txtCliente"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/folio"
            android:textSize="20sp"
            android:paddingBottom="10sp"
            android:id="@+id/txtFolio"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/des"
            android:paddingBottom="20sp"
            android:id="@+id/txtDescripcion"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pinicial"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:paddingBottom="20sp"
            android:id="@+id/txtPagoInicial"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/precio"
            android:inputType="number"
            android:textAlignment="textEnd"
            android:paddingBottom="20sp"
            android:id="@+id/txtPrecio"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plazos"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/red"
            android:paddingTop="25sp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12 Meses"
                android:checked="true"
                android:id="@+id/rdb12"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="24 Meses"
                android:id="@+id/rdb24"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="36 Meses"
                android:id="@+id/rdb36"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="48 Meses"
                android:id="@+id/rdb48"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calcular"
                android:id="@+id/btnCalcular"
                android:layout_marginEnd="10sp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Limpiar"
                android:id="@+id/btnLimpiar"
                android:layout_marginEnd="10sp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cerrar"
                android:id="@+id/btnCerrar"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Calculos"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:paddingTop="25sp"
            android:paddingBottom="10sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/porinicial"
            android:textSize="20sp"
            android:id="@+id/lblPorcentajeInicial"
            android:paddingBottom="5sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tfin"
            android:textSize="20sp"
            android:id="@+id/lblTotalFin"
            android:paddingBottom="5sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pmensual"
            android:textSize="20sp"
            android:id="@+id/lblPagoMensual"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>