<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginCotizacion">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marca"
            android:textSize="30sp"
            android:textColor="@color/red"
            android:textAlignment="center"
            android:layout_marginTop="15sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_marginTop="10sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ciudad"
            android:textSize="20sp"
            android:textAlignment="center"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/cotizacion"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cliente"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_marginTop="30sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lblnombre"
            android:textAlignment="center"
            android:textSize="20sp"
            android:id="@+id/txtCliente"
            android:layout_marginTop="15sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="40sp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="60sp"
                android:backgroundTint="@color/encabezado"
                android:text="@string/regresar"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginEnd="20sp"
                android:id="@+id/btnRegresar"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="60sp"
                android:backgroundTint="@color/red"
                android:text="@string/ingresar"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/btnIngresar"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>