<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Hola">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/titulo"
            android:textSize="30sp"
            android:textColor="@color/otroColor"
            android:paddingBottom="10sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtNombreFL"
            android:autofillHints=""
            android:hint="@string/nombre"
            android:inputType="text"
            android:paddingBottom="10sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtSaludo"
            android:textColor="@color/miColor"
            android:textAlignment="center"
            android:textSize="15sp"
            android:paddingBottom="10sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnPulsar"
            android:text="@string/Pulsar"
            android:paddingBottom="10sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLimpiar"
            android:text="@string/Limpiar"
            android:paddingBottom="10sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSalir"
            android:text="@string/Salir"
            android:paddingBottom="10sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>