<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Monedas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15sp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtCantidad"
            android:textSize="18sp"
            android:hint="@string/cantidad"
            android:gravity="end"
            android:inputType="numberDecimal"
            android:paddingBottom="10sp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spnConversion"
            android:paddingBottom="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10sp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/calcular"
                android:textSize="15sp"
                android:id="@+id/btnCalcular"
                android:layout_marginEnd="5dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Limpiar"
                android:textSize="15sp"
                android:id="@+id/btnLimpiar"
                android:layout_marginEnd="5dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cerrar"
                android:textSize="15sp"
                android:id="@+id/btnCerrar"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/res"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/miColor"
            android:id="@+id/txtResultado"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>